fixed settings/feedback dark mode text color

--- a/src/front/styles/DarkMode.css
+++ b/src/front/styles/DarkMode.css
@@ -125,3 +125,13 @@ body.dark-mode .dashboard-item-active::after {
   border-bottom-right-radius: 15px;
   box-shadow: 0px 25px 0 0 black;
 }
+
+
+body.dark-mode .feedback-form-container {
+  color: black; /* or #000 for black */
+}
+
+body.dark-mode .tab {
+  color: black; /* or any color that works with your dark mode */
+}
+
